--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -14,9 +14,14 @@
                         (keyup.enter)="HTMLLogIn()">
                     <h1>Log Ind</h1>
 
-                    <br />
+                    <div class="row mt-3">
+                      <div class="col">
+                        <div class="alert alert-danger mb-0"
+                             *ngIf="errorMessageAtSignIn?.length > 0">{{errorMessageAtSignIn}}</div>
+                      </div>
+                    </div>
 
-                    <div class="form-row">
+                    <div class="form-row mt-3">
                       <div class="col">
                         <div class="input-group">
                           <div class="input-group-prepend">
